added explanation about html and css to web scraping

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -383,11 +383,12 @@ lang_db <- tbl(con_lang_data, "lang")
 lang_db
 ```
 
-Although it looks like we just got a data frame from the database, we didn't! It's a *reference*, showing us data that is still in the SQLite database (note the first two lines of the output). 
-It does this because databases are often more efficient at selecting, filtering and joining large data sets than R. And typically, the database will not even be 
-stored on your computer, but rather a more powerful machine somewhere on the web. So R is lazy and waits to bring this data into memory until you explicitly tell 
-it to do so using the `collect` function from the `dbplyr` package. 
 
+Although it looks like we just got a data frame from the database, we didn't! It's a *reference*, showing us data that is still in the SQLite database. It does this because databases are often more efficient at selecting, filtering and joining large data sets than R. And typically, the database will not even be stored on your computer but rather a more powerful machine somewhere on the web. So R is lazy and waits to bring this data into memory until you explicitly tell it to using the `collect` function from the `dbplyr` package. Figure \@ref(fig:01-ref-vs-tibble) highlights the difference between a `tibble` object in R and the output we just got. Notice for the table on the left, the first two lines of the output indicate the source. The last line doesn't show how many rows there are (R is trying to avoid performing expensive query operations), whereas the output for the `tibble` object does. 
+
+```{r 01-ref-vs-tibble, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Comparison of a reference to data in a database and a tibble in R", fig.retina = 2, out.width="800"}
+knitr::include_graphics("img/ref_vs_tibble.jpeg")
+```
 Here we will filter for only rows in the Aboriginal languages category according to the 2016 Canada Census, and then use `collect` to finally bring this data into R as a data frame. 
 
 ```{r}
@@ -587,7 +588,10 @@ information to gather. So instead of asking your browser to translate the inform
 web server provides into something you can see, you can collect
 that data programmatically---in the form of **h**yper**t**ext **m**arkup **l**anguage (HTML) 
 and **c**ascading **s**tyle **s**heet (CSS) code---and
-process it to extract useful information.
+process it to extract useful information. HTML provides the basic structure of a site
+and tells the webpage how to display the content (e.g. creating titles, 
+paragraphs, bullet lists etc.). Whereas CSS helps style the content and tells the webpage
+how the HTML elements should be presented (e.g. colours, layouts, fonts etc.). 
 
 This subsection will show you the basics of both web scraping
 with the [`rvest` R package](https://github.com/hadley/rvest)
