added html explanation

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -589,7 +589,7 @@ web server provides into something you can see, you can collect
 that data programmatically---in the form of **h**yper**t**ext **m**arkup **l**anguage (HTML) 
 and **c**ascading **s**tyle **s**heet (CSS) code---and
 process it to extract useful information. HTML provides the basic structure of a site
-and tells the webpage how to display the content (e.g. creating titles, 
+and tells the webpage how to display the content (e.g. titles, 
 paragraphs, bullet lists etc.). Whereas CSS helps style the content and tells the webpage
 how the HTML elements should be presented (e.g. colours, layouts, fonts etc.). 
 
