explaining html tags

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -418,9 +418,7 @@ tail(aboriginal_lang_db)
 ```
 ## Error: tail() is not supported by sql sources
 ```
-Additionally, some operations will not work to extract columns or single values from the reference given by the `tbl` function. Thus, once you have finished your data wrangling of the `tbl` database reference object, it is advisable to bring it into your local machine's memory using `collect` as a data frame. 
-
-> Warning: Usually, databases are very big! Reading the object into your local machine may give an error or take a lot of time to run so be careful if you plan to do this! This is one reason we may want to filter rows or select columns first before reading it in!
+Additionally, some operations will not work to extract columns or single values from the reference given by the `tbl` function. Thus, once you have finished your data wrangling of the `tbl` database reference object, it is advisable to bring it into your local machine's memory using `collect` as a data frame. Usually, databases are very big! Reading the object into your local machine may give an error or take a lot of time to run so be careful if you plan to do this. This is one reason we may want to filter rows or select columns first before reading it in!
  
 #### Reading data from a PostgreSQL database 
 
@@ -681,7 +679,7 @@ and more. So this source code most likely contains all the information we are in
 Let's dig into that line above a bit more. You can see that that bit of code
 has an *opening tag* (words between `<` and `>`, like `<span>`) and a *closing tag* 
 (the same with a slash, like `</span>`). HTML source code generally stores
-its data between opening and closing tags like these. Above you can see that
+its data between opening and closing tags like these. Tags, like `<span>`, are keywords which tell the web browser how to display or format the content. Above you can see that
 the information we want (`$800`) is stored between an opening and closing 
 tag (`<span>` and `</span>`). In the opening tag, you can also see a very useful
 "class" (a special word that is sometimes included with opening tags): 
