removing repeating text

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -38,7 +38,7 @@ By the end of the chapter, readers will be able to:
 - retrieve data from a database query and bring it into R using the `collect` function from the `dbplyr` package
 - use `write_csv` to save a data frame to a `.csv` file
 
-- (*optional*) obtain data using **A**pplication **P**rogramming **I**nterfaces (APIs) and web scraping
+- (*optional*) obtain data using **a**pplication **p**rogramming **i**nterfaces (APIs) and web scraping
     - read HTML source code from a URL using the `rvest` package
     - read data from the Twitter API using the `rtweet` package
     - compare downloading tabular data from a plain text file (e.g. `.csv`), accessing data from an API, and scraping the HTML source code from a website
@@ -567,8 +567,8 @@ stored in a plaintext, spreadsheet-like format (e.g., comma- or tab-separated)
 from a web URL using one of the `read_*` functions from the `tidyverse`. But 
 as time goes on, it is increasingly uncommon to find
 data (especially large amounts of data) in this format available for download
-from a URL. Instead, websites now often offer something known as an **A**pplication
-**P**rogramming **I**nterface (API), which provides a programmatic way to ask
+from a URL. Instead, websites now often offer something known as an **a**pplication
+**p**rogramming **i**nterface (API), which provides a programmatic way to ask
 for subsets of a dataset. This allows the website owner to control *who* has access
 to the data, *what portion* of the data they have access to, and *how much* data they can access.
 Typically, the website owner will give you a *token* (a secret string
@@ -699,21 +699,22 @@ are looking for---a dollar amount between opening and closing tags that have the
 matching patterns from the source code to obtain our data. This sort of "pattern"
 is known as a *CSS selector* (where CSS stands for **c**ascading **s**tyle **s**heet).
 
-The above was a particularly simple example of "finding the pattern to look for"; many 
+The above was a simple example of "finding the pattern to look for"; many 
 websites are quite a bit larger and more complex, and so is their website
-source code. Fortunately there are tools available to make this process
+source code. Fortunately, there are tools available to make this process
 easier. For example, 
 [SelectorGadget from the Chrome Web Store](https://chrome.google.com/webstore/detail/SelectorGadget/mhjhnkcfbdhnjickkkdbjoemdmbfginb) is 
-an open source tool that simplifies identifying the generating and finding CSS selectors. 
+an open-source tool that simplifies identifying the generating and finding CSS selectors. 
 At the end of the chapter in the additional resources section, we include a link to
 a short video on how to install and use the SelectorGadget tool to 
 obtain CSS selectors for use in web scraping. 
-After installing and enabling the tool, you can simply click the 
+After installing and enabling the tool, you can click the 
 website element for which you want an appropriate selector. For 
 example, if we click the price of an apartment listing, we
 find that SelectorGadget shows us the selector `.result-price`
 in its toolbar, and highlights all the other apartment
 prices that would be obtained using that selector.
+
 
 ![](img/sg1.png)
 
