removing extra comma

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -943,7 +943,7 @@ tidyverse_tweets
 tidyverse_tweets <- read_csv("data/tweets.csv")
 tidyverse_tweets
 ```
-The data has quite a few variables! Let's reduce this down to a few variables of interest: `created_at`,  `retweet_screen_name`, `is_retweet`, and `text`,.
+The data has quite a few variables! Let's reduce this down to a few variables of interest: `created_at`,  `retweet_screen_name`, `is_retweet`, and `text`.
 ```{r 01-select-tweets, message = FALSE, warning = FALSE}
 tidyverse_tweets <- tidyverse_tweets %>% select(created_at, retweet_screen_name, 
                                                 is_retweet, text)
