changing F to FALSE

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -61,13 +61,13 @@ knitr::include_graphics("img/filesystem.jpeg")
 
 **Reading `happiness_report.csv` using a relative path:**
 
-```{r eval = F}
+```{r eval = FALSE}
 happiness_data <- read_csv("data/happiness_report.csv")
 ```
 
 **Reading `happiness_report.csv` using an absolute path:**
 
-```{r eval = F}
+```{r eval = FALSE}
 happiness_data <- read_csv("/home/dsci-100/worksheet_02/data/happiness_report.csv")
 ```
 
@@ -133,7 +133,7 @@ And here is a review of how we can use `read_csv` to load it into R. First we
 load the `tidyverse` package to gain access to useful functions for reading the 
 data. 
 
-```{r, message = F}
+```{r, message = FALSE}
 library(tidyverse)
 ```
 
