replacing all caps with lower case as suggested by rev C

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -887,7 +887,7 @@ are shown below.
 knitr::include_graphics("img/tidyverse_twitter.png")
 ```
 
-**STOP! Think about your API usage carefully!**
+**Stop! Think about your API usage carefully!**
 
 When you access an API, you are initiating a transfer of data from a web server
 to your computer. Web servers are expensive to run and do not have infinite resources.
