adding more explanation to web scraping section

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -690,7 +690,7 @@ and more. So this source code most likely contains all the information we are in
 Let's dig into that line above a bit more. You can see that that bit of code
 has an *opening tag* (words between `<` and `>`, like `<span>`) and a *closing tag* 
 (the same with a slash, like `</span>`). HTML source code generally stores
-its data between opening and closing tags like these. Tags, like `<span>`, are keywords which tell the web browser how to display or format the content. Above you can see that
+its data between opening and closing tags like these. Tags are keywords which tell the web browser how to display or format the content. Above you can see that
 the information we want (`$800`) is stored between an opening and closing 
 tag (`<span>` and `</span>`). In the opening tag, you can also see a very useful
 "class" (a special word that is sometimes included with opening tags): 
@@ -789,6 +789,8 @@ td:nth-child(7),
 .infobox td:nth-child(3)
 ```
 
+Now that we have the CSS selectors that describe the properties of the elements that we want to target (e.g. has a tag name `price`), we can use it to find certain elements in web pages and extract data. 
+
 **Using `rvest`**
 
 Now that we have our CSS selectors we can use the `rvest` R package to scrape our
@@ -810,10 +812,10 @@ instead of  displaying the website to you, the `read_html` function just returns
 the HTML source code itself, which we have
 stored in the `page` variable. Next, we send the page object to the `html_nodes`
 function, along with the CSS selectors we obtained from
-the SelectorGadget tool. Make sure to surround the selectors with quotations; `html_nodes` expects that
-argument to be a string. The `html_nodes` function then selects *nodes* from the HTML document that 
+the SelectorGadget tool. Make sure to surround the selectors with quotations; the function, `html_nodes`, expects that
+argument is a string. The `html_nodes` function then selects *nodes* from the HTML document that 
 match the CSS selectors you specified.
-A *node* is an HTML tag pair combined with the content stored between the tags. For our
+A *node* is an HTML tag pair (e.g. `<td>` and `</td>` which defines the cell of a table) combined with the content stored between the tags. For our
 CSS selector `td:nth-child(5)`, an example node that would be selected would
 be: 
 ```html
@@ -824,7 +826,7 @@ be:
 
 We store the result of the `html_nodes` function in the `population_nodes` variable.
 Note that below we use the `paste` function with a comma separator (`sep=","`)
-to build the list of selectors while maintaining code readability; this avoids
+to build the list of selectors. The `paste` function converts elements to character and combines the values into a list. We use this function to build the list of selectors to maintain code readability; this avoids
 having one very long line of code with the string
 `"td:nth-child(5),td:nth-child(7),.infobox:nth-child(122) td:nth-child(1),.infobox td:nth-child(3)"`
 as the second argument of `html_nodes`:
