minor changes to API section

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -906,7 +906,7 @@ we should abide by when using the API.
 
 **Using `rtweet`**
 
-After checking the website, it seems like asking for 400 tweets one time is acceptable.
+After checking the Twitter website, it seems like asking for 400 tweets one time is acceptable.
 So we can use the `get_timelines` function to ask for the last 400 tweets from the Tidyverse account.
 ```r
 tidyverse_tweets <- get_timelines('tidyverse', n=400)
@@ -945,7 +945,7 @@ tidyverse_tweets
 tidyverse_tweets <- read_csv("data/tweets.csv")
 tidyverse_tweets
 ```
-The data has quite a few variables! Let's reduce this down to a few variables of interest: `created_at`,  `retweet_screen_name`, `is_retweet`, and `text`.
+The data has quite a few variables! (Notice that the output above shows that we have a data table with 293 rows and 71 columns). Let's reduce this down to a few variables of interest: `created_at`,  `retweet_screen_name`, `is_retweet`, and `text`.
 ```{r 01-select-tweets, message = FALSE, warning = FALSE}
 tidyverse_tweets <- tidyverse_tweets %>% select(created_at, retweet_screen_name, 
                                                 is_retweet, text)
